[gd_scene load_steps=3 format=2]

[ext_resource path="res://player-base.tscn" type="PackedScene" id=1]
[ext_resource path="res://main-menu.gd" type="Script" id=2]

[node name="main-menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 440.0
margin_top = 444.0
margin_right = 595.0
margin_bottom = 489.0
text = "join lobby"

[node name="player-base" parent="." instance=ExtResource( 1 )]
position = Vector2( 177, 274 )

[node name="Button2" type="Button" parent="player-base"]
margin_left = -74.0
margin_top = -105.0
margin_right = 84.0
margin_bottom = -73.0
text = "change profile picture"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 443.0
margin_top = 348.0
margin_right = 599.0
margin_bottom = 383.0
text = "player name"
align = 1
max_length = 20
caret_blink = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="player-base/Button2" to="." method="_on_Button2_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
